<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/addItem"
        android:orderInCategory="100"
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"/>
    <item
        android:title="@string/deleteAll"
        android:orderInCategory="101"
        android:id="@+id/action_delete_all"
        android:icon="@android:drawable/ic_menu_info_details"/>
    <item
        android:title="@string/totalSpent"
        android:orderInCategory="102"
        android:id="@+id/action_total_spent" />
    <item
        android:title="@string/about"
        android:orderInCategory="103"
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_help"/>

</menu>