<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4edf6"
    android:orientation="vertical"
    android:id="@+id/itemLayout">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/typeHint"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priceHint"
        android:inputType="phone|number"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptHint"
        android:layout_marginBottom="5dp"/>

    <CheckBox
        android:id="@+id/cbStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statusHint"/>

</LinearLayout>